<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/messageTextView" />

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_type"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addTextButton"
            android:textColor="#7B1FA2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/messageListTextView" />

        <Spinner
            android:id="@+id/messageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:contentDescription="@string/message_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/countTextView" />

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_telephone"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/contactList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:contentDescription="@string/contact_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/numberTextView" />

        <EditText
            android:id="@+id/countInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_messages"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendTextButton"
            android:textColor="#7B1FA2" />

    </LinearLayout>

</ScrollView>